--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,6 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
@@ -180,6 +179,8 @@
 <main class="main">
   <div class="content">
     <div class="left-side">
+<h1>ng build --output-path --base-href /test/</h1>
+
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 982 239"
